--- a/charts/cronitor-k8s-agent/values.yaml
+++ b/charts/cronitor-k8s-agent/values.yaml
@@ -1,17 +1,13 @@
-# Default values for cronitor-k8s-agent.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
-image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
-
+image: jdotjdot/cronitor-k8s:latest
+imagePullPolicy: Always
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+config:
+  default: 'include'
 
 injector:
   namespaceSelector: ''
