Add Cronitor telemetry API integration

--- a/charts/cronitor-k8s-agent/templates/extras/cronjob-test.yaml
+++ b/charts/cronitor-k8s-agent/templates/extras/cronjob-test.yaml
@@ -6,6 +6,7 @@ spec:
   schedule: "*/1 * * * *"
   jobTemplate:
     spec:
+      backoffLimit: 3
       template:
         spec:
           containers:
