--- a/charts/cronitor-k8s-agent/templates/deployment.yaml
+++ b/charts/cronitor-k8s-agent/templates/deployment.yaml
@@ -29,6 +29,11 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image }}"
           imagePullPolicy: {{ .Values.imagePullPolicy }}
+          env:
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
           envFrom:
             - configMapRef:
                 name: {{ include "cronitor-k8s-agent.fullname" . }}-environment-configmap
