--- a/charts/cronitor-k8s-agent/Chart.yaml
+++ b/charts/cronitor-k8s-agent/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: cronitor-k8s-agent
+name: cronitor-kubernetes
+description: |
+  Helm chart to deploy the Cronitor Kubernetes agent to automatically monitor your CronJobs
 version: 0.1.0
