Add tagging, namespaces, cronitor-id, environment

--- a/charts/cronitor-k8s-agent/templates/environment-configmap.yaml
+++ b/charts/cronitor-k8s-agent/templates/environment-configmap.yaml
@@ -8,3 +8,5 @@ metadata:
 data:
 
   DEFAULT_BEHAVIOR: {{ .Values.config.default | quote }}
+  DEFAULT_ENV: {{ .Values.config.defaultEnvironment | quote }}
+  TAGS: {{ .Values.config.tags | quote }}
