--- a/test-yaml/cronjob.yaml
+++ b/test-yaml/cronjob.yaml
@@ -1,7 +1,10 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: eventrouter-test-croonjob
+  name: eventrouter-test-cronjob
+  annotations:
+    k8s.cronitor.io/env: 'staging'
+    k8s.cronitor.io/cronitor-id: 'uv93823'
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
