--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,13 +12,25 @@ jobs:
     name: Push Docker image to Github Registry
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Push to Github Registry
-        uses: docker/build-push-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Github Registry
+        uses: docker/login-action@v1
         with:
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: cronitorio/cronitor-kubernetes/cronitor-kubernetes
-          tag_with_ref: true
+
+      - name: Build and push to Github Registry
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: cronitorio/cronitor-kubernetes/cronitor-kubernetes
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
