--- a/charts/cronitor-kubernetes/Chart.yaml
+++ b/charts/cronitor-kubernetes/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-appVersion: "1.0"
+appVersion: "0.1-alpha"
 name: cronitor-kubernetes
 description: |
   Helm chart to deploy the Cronitor Kubernetes agent to automatically monitor your CronJobs
-version: 0.1.0
+version: 0.1.1
