--- a/charts/cronitor-kubernetes/templates/serviceaccount.yaml
+++ b/charts/cronitor-kubernetes/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "cronitor-k8s-agent.serviceAccountName" . }}
+  name: {{ template "cronitor-kubernetes-agent.serviceAccountName" . }}
   labels:
-{{ include "cronitor-k8s-agent.labels" . | indent 4 }}
+{{ include "cronitor-kubernetes-agent.labels" . | indent 4 }}
 {{- end -}}
