--- a/charts/cronitor-kubernetes/templates/deployment.yaml
+++ b/charts/cronitor-kubernetes/templates/deployment.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "cronitor-k8s-agent.fullname" . }}
+  name: {{ include "cronitor-kubernetes-agent.fullname" . }}
   labels:
-    {{ include "cronitor-k8s-agent.labels" . | nindent 4 }}
+    {{ include "cronitor-kubernetes-agent.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "cronitor-k8s-agent.name" . }}
+      app.kubernetes.io/name: {{ include "cronitor-kubernetes-agent.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "cronitor-k8s-agent.name" . }}
+        app.kubernetes.io/name: {{ include "cronitor-kubernetes-agent.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ template "cronitor-k8s-agent.serviceAccountName" . }}
+      serviceAccountName: {{ template "cronitor-kubernetes-agent.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -48,7 +48,7 @@ spec:
                   key: {{ required "A valid key in a Secret holding the API key is required!" .Values.credentials.secretKey }}
           envFrom:
             - configMapRef:
-                name: {{ include "cronitor-k8s-agent.fullname" . }}-environment-configmap
+                name: {{ include "cronitor-kubernetes-agent.fullname" . }}-environment-configmap
           ports:
             - name: http
               containerPort: 80
