--- a/charts/cronitor-kubernetes/templates/rbac.yaml
+++ b/charts/cronitor-kubernetes/templates/rbac.yaml
@@ -2,9 +2,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "cronitor-k8s-agent.fullname" . }}
+  name: {{ include "cronitor-kubernetes-agent.fullname" . }}
   labels:
-    {{ include "cronitor-k8s-agent.labels" . | nindent 4 }}
+    {{ include "cronitor-kubernetes-agent.labels" . | nindent 4 }}
 rules:
   - apiGroups: [""]
     resources:
@@ -25,15 +25,15 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    {{ include "cronitor-k8s-agent.labels" . | nindent 4 }}
-  name: {{ include "cronitor-k8s-agent.fullname" . }}
+    {{ include "cronitor-kubernetes-agent.labels" . | nindent 4 }}
+  name: {{ include "cronitor-kubernetes-agent.fullname" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "cronitor-k8s-agent.fullname" . }}
+  name: {{ include "cronitor-kubernetes-agent.fullname" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "cronitor-k8s-agent.serviceAccountName" . }}
+    name: {{ template "cronitor-kubernetes-agent.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
 
 {{- end -}}
