--- a/charts/cronitor-kubernetes/templates/deployment.yaml
+++ b/charts/cronitor-kubernetes/templates/deployment.yaml
@@ -36,6 +36,7 @@ spec:
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           args:
             - agent
+            - "--ship-logs={{ .Values.config.shipLogs | required "config.shipLogs must have a value of true or false" }}"
           env:
             - name: NODE_NAME
               valueFrom:
