--- a/charts/cronitor-kubernetes/templates/environment-configmap.yaml
+++ b/charts/cronitor-kubernetes/templates/environment-configmap.yaml
@@ -10,3 +10,9 @@ data:
   DEFAULT_BEHAVIOR: {{ .Values.config.default | quote }}
   DEFAULT_ENV: {{ .Values.config.defaultEnvironment | quote }}
   TAGS: {{ .Values.config.tags | quote }}
+
+  {{ if .Values.config.sentryEnabled }}
+  SENTRY_ENABLED: true
+  SENTRY_RELEASE: 'chart@{{ .Chart.Version }}|app@{{ .Chart.AppVersion }}'
+  SENTRY_ENVIRONMENT: 'production'
+  {{ end }}
