--- a/test-yaml/cronjob.yaml
+++ b/test-yaml/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: eventrouter-test-cronjob-2
   annotations:
-    k8s.cronitor.io/env: 'pr1234'
+    k8s.cronitor.io/env: 'staging'
 #    k8s.cronitor.io/cronitor-id: 'uv93823'
 spec:
   schedule: "*/1 * * * *"
