--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -58,7 +58,7 @@ jobs:
           kubectl create secret generic cronitor-secret --from-literal=CRONITOR_API_KEY=${{ secrets.CRONITOR_API_KEY }}
 
       - name: Apply test YAML
-        run: kubectl apply -f ./e2e-test/resources/
+        run: kubectl apply --recursive -f e2e-test/resources/
 
       - name: Sleep for 5 minutes to let events populate
         run: sleep $((60 * 5))
