--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -46,12 +46,14 @@ jobs:
         with:
           node_image: ${{ matrix.kind_image }}
 
-
-#      - uses: engineerd/setup-kind@v0.5.0
-#        with:
-#          wait: 300s
-#          version: v0.11.1
-#          image: kindest/node:v1.20.7
+      # We need to have the names in Cronitor be separate, so if we use separate namespaces,
+      # we can kind of "cheat" a bit and get unique monitor names
+      # This is _not_ needed for separation, since every Github Actions job in the matrix will
+      # run in its own separate environment and Kind cluster.
+      - name: Create namespace "${{ steps.generate_random_id.outputs.random_id }}"
+        run: >
+          kubectl create ns "${{ steps.generate_random_id.outputs.random_id }}"
+          kubectl config set-context --current --namespace="${{ steps.generate_random_id.outputs.random_id }}"
 
       - name: Add API key
         run: >
@@ -67,8 +69,10 @@ jobs:
       - name: Install Cronitor Kubernetes agent
         run: |
           helm upgrade --install cronitor-kubernetes ./charts/cronitor-kubernetes/ \
+            --namespace "${{ steps.generate_random_id.outputs.random_id }}" \
             --set credentials.secretName=cronitor-secret \
             --set credentials.secretKey=CRONITOR_API_KEY \
+            --set config.defaultEnvironment=ci \
             --set config.tags='ci:${{ steps.generate_random_id.outputs.random_id }}'
 
       - run: pip install -r requirements.txt
