--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Generate unique random tag for run
         id: generate_random_id
-        run: RANDOM_ID=RUN--$(date +%s) echo "::set-output name=random_id::$RANDOM_ID"
+        run: echo "::set-output name=random_id::RUN--$(date +%s)"
 
       - uses: actions/checkout@v2.3.4
 
