update test yaml annotations so events send

--- a/e2e-test/resources/cron-jobs/cronjob-exclude.yaml
+++ b/e2e-test/resources/cron-jobs/cronjob-exclude.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: eventrouter-test-croonjob-excluder
   annotations:
-    k8s.cronitor.io/exclude: "true"
+    k8s.cronitor.io/exclude: "false"
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
