--- a/e2e-test/resources/cron-jobs/cronjob-fail.yaml
+++ b/e2e-test/resources/cron-jobs/cronjob-fail.yaml
@@ -2,8 +2,7 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: eventrouter-test-cronjob-fail
-  annotations:
-    k8s.cronitor.io/env: 'staging'
+  annotations: {}
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
