--- a/e2e-test/resources/cron-jobs/cronjob.yaml
+++ b/e2e-test/resources/cron-jobs/cronjob.yaml
@@ -2,8 +2,7 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: eventrouter-test-cronjob-2
-  annotations:
-    k8s.cronitor.io/env: 'staging'
+  annotations: {}
 #    k8s.cronitor.io/cronitor-id: 'uv93823'
 spec:
   schedule: "*/1 * * * *"
