--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -74,6 +74,7 @@ jobs:
     name: Create and publish Helm chart to Github pages
     needs: [create_docker_container]
     runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'main' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
